<resources>
    <string name="app_name">Jejak Karbon</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fill_required">*Required\n</string>
    <string name="forgot_password">Forgot Password?\n</string>
    <string name="login_button">Login\n</string>
    <string name="dont_have_acc"><font color="#00210B">Don\'t Have Account?</font> Register Here\n</string>
    <string name="or">or\n</string>
    <string name="login_title">Sign In to Jejak Karbon\n</string>
    <string name="login_subtitle">Enter Your Details below\n</string>
    <string name="sign_up_with_google">Sign Up With Google\n</string>
    <string name="register_title">Register to Jejak Karbon</string>
    <string name="register_button">Register\n</string>
    <string name="already_have_acc"><font color="#00210B">Already Have an Account?</font> Sign In Here</string>
    <string name="logo_description">logo</string>
    <string name="sign_in_to_jejak_karbon">Sign in to Jejak karbon</string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="continued">Continue</string>
    <string name="question_1">How much do you get around by car annually?</string>
    <string name="i_don_t_drive_or_ride">I don’t drive or ride</string>
    <string name="up_100">up to 100 km</string>
    <string name="up_300">up to 300 km</string>
    <string name="up_500">up to 500 km</string>
    <string name="enter_kilometers">Enter kilometers</string>
    <string name="plant_preview">Your Plant</string>
    <string name="predict">Predict</string>
    <string name="plant_name_predicted">Plant Name \n</string>
    <string name="do_you_have_a_plant">Do you have a plant?</string>
    <string name="no_i_don_t_have_plant">No, I don’t have plant</string>
    <string name="yes_i_have">Yes, i have</string>
    <string name="please_take_a_picture_of_your_plant_to_calculate_how_much_carbon_it_produces">Please take a picture of your plant to calculate how much carbon it produces.</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="guide_screen_title">Guide</string>
    <string name="health_category">Health\n</string>
    <string name="food_category">Food\n\n</string>
    <string name="home_category">Home\n</string>
    <string name="lifestyle_category">Lifestyle\n</string>
    <string name="home">Home\n</string>
    <string name="statistics">Statistics</string>
    <string name="addstory">Add Story\n</string>
    <string name="guide">Guide\n</string>
    <string name="profile">Profile</string>
    <string name="profile_screen_title">Profile</string>
    <string name="back">Back</string>
    <string name="edit_profile_title">Edit Account</string>
    <string name="my_footprint">My Footprint</string>
    <string name="footprint_value">244 Kg</string>
    <string name="positive_impact">Positive Impact</string>
    <string name="positiv_impact_value">1244 Kg</string>
    <string name="calculate_footprint">Calculate My Footprint</string>
    <string name="image">image</string>
    <string name="title_guide">Title Guide</string>
    <string name="deskripsi">deskripsi</string>
    <string name="what_does_your_vehicle_use">What does your vehicle use?</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
</resources>