<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_logo"/>
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics"
            android:icon="@drawable/ic_statistics_logo"/>
        <item
            android:id="@+id/nav_add"
            android:title="@string/addstory"
            android:icon="@drawable/ic_add_logo"/>
        <item
            android:id="@+id/nav_guide"
            android:title="@string/guide"
            android:icon="@drawable/ic_guide_logo"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile_logo"/>

</menu>