<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="22dp"
    android:orientation="vertical"
    android:padding="12dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/please_take_a_picture_of_your_plant_to_calculate_how_much_carbon_it_produces"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/md_theme_light_outline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/skip"
            android:textColor="#93D7AF"
             />


        <Button
            android:id="@+id/btnContinue"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/continued"
            android:textColor="@color/md_theme_light_primary"
             />

    </LinearLayout>

</LinearLayout>