<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingPlantActivity">

    <TextureView
        android:id="@+id/videoTextureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/textview_background"
        android:padding="20dp"
        android:text="@string/do_you_have_a_plant"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoTextureView"
        app:layout_constraintVertical_bias="0.876" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/radio_group_background"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintCircleRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobtn_1"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_i_don_t_have_plant" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobtn_2"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes_i_have" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="46dp"
        android:layout_weight="1"
        android:text="@string/continued"
        android:enabled="false"
        android:textColor="@color/md_theme_light_onPrimary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/videoTextureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>