<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.guide.GuideActivity">

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_health_category"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="65dp"
        android:text="@string/health_category"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide_screen_title" />

    <Button
        android:id="@+id/bt_food_category"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="65dp"
        android:text="@string/food_category"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_health_category"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_home_category"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="65dp"
        android:text="@string/home_category"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toEndOf="@+id/bt_food_category"
        app:layout_constraintTop_toTopOf="@+id/bt_health_category"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_lifestyle_category"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="65dp"
        android:text="@string/lifestyle_category"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toEndOf="@+id/bt_home_category"
        app:layout_constraintTop_toTopOf="@+id/bt_health_category"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_guide_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/guide_screen_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.navigation.NavigationView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_food_category"
        app:layout_constraintStart_toEndOf="@+id/tv_guide_screen_title"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_menu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide_screen_title"
        tools:listitem="@layout/item_guide" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>