<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="45dp"
        android:layout_height="58.3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logojejakkarbon" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/login_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_login" />

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/login_subtitle"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_login" />


    <Button
        android:id="@+id/iv_google_login"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="225dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/sign_in_with_google"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="5dp"
        app:icon="@drawable/icon_google"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_subtitle" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/or"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_google_login" />

    <View
        android:id="@+id/left_divider"
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="235dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_google_login" />

    <View
        android:id="@+id/right_divider"
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:layout_marginStart="235dp"
        android:layout_marginTop="63dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_google_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUsernameLogin"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="Username"
        app:helperText="@string/fill_required"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/md_theme_light_error"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:startIconDrawable="@drawable/ic_username_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUsernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:maxLines="1"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPasswordLogin"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:hint="Password"
        app:helperText="@string/fill_required"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/md_theme_light_error"
        app:counterMaxLength="16"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tiUsernameLogin"
        app:startIconDrawable="@drawable/ic_password_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/md_theme_dark_surfaceTint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiUsernameLogin" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/login_button"
        android:textColorLink="#8BC34A"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPasswordLogin" />

    <TextView
        android:id="@+id/tv_already_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/dont_have_acc"
        android:textColor="@color/md_theme_dark_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_login" />


</androidx.constraintlayout.widget.ConstraintLayout>