<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.CameraActivity">

    <TextView
        android:id="@+id/tv_plant_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/plant_preview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_plant_preview"
        android:layout_width="300dp"
        android:layout_height="290dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plant_preview"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/bt_predict"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/predict"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_plant_preview" />

    <TextView
        android:id="@+id/tv_title_plant_predicted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/plant_name_predicted"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_predict" />

    <Button
        android:id="@+id/bt_calculate_footprint"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/calculate_footprint"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_predict"
        app:layout_constraintVertical_bias="0.057">

        <TextView
            android:id="@+id/tv_plant_predicted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>